--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,15 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
-            "name": "Launch index.html",
             "type": "chrome",
             "request": "launch",
-            "file": "${workspaceFolder}/index.html"
+            "name": "Launch Chrome against localhost",
+            "url": "http://127.0.0.1:8080",
+            "webRoot": "${workspaceFolder}",
+            // Disable chrome caching, not sure which one works
+            //"runtimeArgs": ["–disable-application-cache","--disk-cache-dir=nul"]
+            "runtimeArgs": ["--auto-open-devtools-for-tabs"]
         }
     ]
 }
