adding files for the work on section planes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,8 +11,7 @@
         "sourceType": "module"
     },
     "rules": {
-        "linebreak-style": ["error", "windows"]
-
-
+        "linebreak-style": ["error", "windows"],
+        "indent": ["error", 2]
     }
 }
